--- a/static/styles/less/base.less
+++ b/static/styles/less/base.less
@@ -1,22 +1,126 @@
-#editor {
-    width: 100%;
-    height: 500px;
-}
-
-.script-list-widget {
-    .script-list-item-widget {
-        display: inline-block;
-        width: 100%;
-        border-bottom: 1px solid #999;
-        margin: 0;
-        text-decoration: none;
-        &:hover,
-        &:visited {
-            background: #eee;
+.header-widget {
+    .navbar-brand {
+        overflow: hidden;
+        margin-left: 10px;
+        color: #fff;
+        &:hover {
+            color: #fff;
         }
-
-        &.selected {
-            background: #ddd;
+        .logo {
+            width: 60px;
+            float: left;
+        }
+        span {
+            position: relative;
+            margin-left: 10px;
+            margin-top: 2px;
+            float: left;
         }
     }
+
+    &.navbar-default {
+        border-radius: 0;
+        background: #4f85bb; /* Old browsers */
+        background: -moz-linear-gradient(-45deg,  #4f85bb 0%, #4f85bb 100%); /* FF3.6+ */
+        background: -webkit-gradient(linear, left top, right bottom, color-stop(0%,#4f85bb), color-stop(100%,#4f85bb)); /* Chrome,Safari4+ */
+        background: -webkit-linear-gradient(-45deg,  #4f85bb 0%,#4f85bb 100%); /* Chrome10+,Safari5.1+ */
+        background: -o-linear-gradient(-45deg,  #4f85bb 0%,#4f85bb 100%); /* Opera 11.10+ */
+        background: -ms-linear-gradient(-45deg,  #4f85bb 0%,#4f85bb 100%); /* IE10+ */
+        background: linear-gradient(135deg,  #4f85bb 0%,#4f85bb 100%); /* W3C */
+        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#4f85bb', endColorstr='#4f85bb',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+    }
+}
+
+.home-page {
+    button {
+        &.create {
+            position: absolute;
+            top: 25px;
+            right: 15px;
+        }
+    }
+
+    .editor-widget {
+        &.communicating {
+            opacity: 0.6;
+        }
+
+        #editor {
+            width: ~"calc(100% - 25px)";
+            margin-left: 15px;
+            height: 500px;
+            font-size: 12px;
+        }
+
+        input[type=text],
+        input[type=number] {
+            margin-right: 5px;
+        }
+
+        .buttons {
+            margin-top: 25px;
+            .btn {
+                margin-right: 5px;
+            }
+        }
+    }
+
+    h3 {
+        padding: 0 10px;
+    }
+
+    .script-list-widget {
+        border-right: 1px solid #ccc;
+
+        .script-list-item-widget {
+            display: inline-block;
+            width: 100%;
+            border-bottom: 1px solid #ccc;
+            margin: 0;
+            text-decoration: none;
+            padding-left: 10px;
+            height: 55px;
+
+            &:first-child {
+                border-top: 1px solid #ccc;
+            }
+
+            &:hover,
+            &:visited {
+                background: #eee;
+            }
+
+            &.selected {
+                background: #ddd;
+                p {
+                    color: #999;
+                }
+            }
+
+            h4 { margin: 5px 0 0; }
+            p {
+                color: #ccc;
+                margin: 0;
+                padding: 5px 0px;
+            }
+        }
+    }
+}
+
+.fade-in-enter {
+  opacity: 0.01;
+  transition: opacity .5s ease-in;
+}
+
+.fade-in-enter.fade-in-enter-active {
+  opacity: 1;
+}
+
+.fade-in-leave {
+  opacity: 1;
+  transition: opacity .5s ease-in;
+}
+
+.fade-in-leave.fade-in-leave-active {
+  opacity: 0.01;
 }
